--- a/static/home.css
+++ b/static/home.css
@@ -1,9 +1,17 @@
+body {
+    background-image: url(/static/sky.png);
+}
+
 .animated-logo {
-    animation: float-logo 10s infinite;
+    animation: float-logo 7s linear infinite;
+    position: relative;
     width: 60%;
 }
 
 @keyframes float-logo {
-    0% { top: 10px; left: 10px; }
-    100% { top: -10px; left: -10px; }
+    0% { transform: translatex(0px) translatey(0px); }
+    25% { transform: translatex(-1px) translatey(4px); }
+    50% { transform: translatex(0px) translatey(0px); }
+    75% { transform: translatex(1px) translatey(4px); }
+    100% { transform: translatex(0px) translatey(0px); }
 }
