--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,11 @@
   src="https://code.jquery.com/jquery-3.4.0.min.js"
   integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
   crossorigin="anonymous"></script>
-<script
-  src="/static/home.js"></script>
+<script src="https://www.amcharts.com/lib/4/core.js"></script>
+<script src="https://www.amcharts.com/lib/4/charts.js"></script>
+<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+<script src="/static/subscriber-chart.js"></script>
+<script src="/static/home.js"></script>
 
-<h1>Title Text</h1>
 <div id="winner_logo"></div>
+<div class="subscriptions-chart" id="chartdiv"></div>
