--- a/templates/index.html
+++ b/templates/index.html
@@ -11,3 +11,8 @@
 
 <div id="winner_logo"></div>
 <div class="subscriptions-chart" id="chartdiv"></div>
+<div class="flex-container">
+    <div class="flex-item" id="tseries_subscribers_count"></div>
+    <div class="flex-item">vs.</div>
+    <div class="flex-item" id="pewdiepie_subscribers_count"></div>
+</div>
